# qspr-qsar-explainability

./: .gitignore  01-ecfp.ipynb  README.md  pyproject.toml  requirements.txt
.matplotlib/: fontlist-v390.json
common/: ecfp.ipynb  global_ecfp_visualization.py  visualize_ecfp.ipynb  visualize_ecfp_v2.ipynb
docs/: main.tex  notebooks.md
qsar/: README.md  checkpoint_utils.py  ecfp.ipynb  explainability_comparison.ipynb  model_performance_comparison.ipynb  nr_ic_merged.csv  qsar_common.py  qsar_config.py  qsar_motif_utils.py  qsar_motif_workflow.py  random-forest-boruta-shap.ipynb  random-forest-cross-validation.ipynb  random-forest-motif-visualization.py  random-forest-parameter-testing.ipynb  random-forest-shap.ipynb  random-forest.ipynb  xgboost-boruta-shap.ipynb  xgboost-cross-validation.ipynb  xgboost-parameter-testing.ipynb  xgboost-shap.ipynb  xgboost.ipynb
qsar/random-forest/: random-forest-boruta-shap.ipynb  random-forest-cross-validation.ipynb  random-forest-motif-visualization.py  random-forest-parameter-testing.ipynb  random-forest-shap.ipynb  random-forest.ipynb
qsar/xgboost/: xgboost-boruta-shap.ipynb  xgboost-cross-validation.ipynb  xgboost-motif-visualization.py  xgboost-parameter-testing.ipynb  xgboost-shap.ipynb  xgboost.ipynb
qspr/: boruta-shap.ipynb  ecfp.ipynb  qspr_common.py  qspr_config.py  random-forest.ipynb  readme.md  roc-cross-validation.ipynb  roc-n-estimators.ipynb  shap.ipynb  shap_rf_vs_xgboost.ipynb  solubility_stats.py  xgboost.ipynb  xgboost2.iapynb
qspr/random-forest/: bit_importance_histogram.ipynb  bit_importance_top_n.ipynb  (+16 more)
(+15 files in other folders)
